# ROS

./: README.md
Prueba/: Hello ROS  ReadMe
Prueba/Errores/: CMakeLists.txt  count.cpp  package.xml
Prueba/Hello ROS/: CMakeLists.txt  hello.cpp  package.xml
Prueba/Publicador/: CMakeLists.txt  package.xml  pubvel.cpp
Prueba/Suscriptor/: CMakeLists.txt  package.xml  subpose.cpp
